# clipwatch

./: .gitignore  LICENSE  README.md
ClipwatchSharp/: ClipwatchSharp.sln
ClipwatchSharp/ClipwatchSharp/: ClipboardWatcher.cs  ClipwatchHandle.cs  ClipwatchSharp.csproj  NativeFunctions.cs  StringOps.cs
ClipwatchSharp/ClipwatchSharpDemo/: ClipwatchSharpDemo.csproj  Program.cs
clipwatch/: CMakeLists.txt  CMakeSettings.json  Cargo.toml
clipwatch/include/: clipwatch.h
clipwatch/src/: lib.rs  linux.c  linux.rs  win.c  win.rs
clipwatch/testprogram/: listenerProgram.cpp
