cmake_minimum_required(VERSION 3.21)
project(clipwatch C CXX)

find_package(Threads REQUIRED)
if (UNIX)
    find_package(X11 REQUIRED)
endif (UNIX)

set(CMAKE_CXX_VISIBILITY_PRESET hidden)
set(CMAKE_VISIBILITY_INLINES_HIDDEN 1)
if (UNIX)
    add_library(clipwatch SHARED src/linux.c)
    target_link_libraries(clipwatch PRIVATE Threads::Threads ${X11_LIBRARIES} Xfixes)
endif (UNIX)
if (WIN32)
    add_library(clipwatch SHARED src/win.c)
    target_link_libraries(clipwatch PRIVATE Threads::Threads)
endif (WIN32)
set_target_properties(clipwatch PROPERTIES CMAKE_C_STANDARD 99)

add_executable(clipwatchTestProgram testprogram/listenerProgram.cpp)
set_target_properties(clipwatchTestProgram PROPERTIES CXX_STANDARD 17)
target_link_libraries(clipwatchTestProgram PRIVATE clipwatch)